[package]
name = "multicid"
version = "0.1.6"
edition = "2021"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Multicodec compatible content identifier implementation"
repository = "https://github.com/cryptidtech/multicid.git"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["serde"]

[dependencies]
multibase = "0.9"
multicodec = { version = "0.3", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multihash = { version = "0.2", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "0.4", git = "https://github.com/cryptidtech/multikey.git" }
multitrait = { version = "0.1", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "0.2", git = "https://github.com/cryptidtech/multiutil.git" }
rand = "0.8"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
serde_test = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
